# fastfiles

./: .env  .gitignore  README.md  app.py  home.html  main.py  pyproject.toml  requirements.txt
elibrary/: README.MD  main.py  utils.py
fastfiles/: __init__.py  azure_storage.py  local.py  main.py  memory.py  s3.py
templates/: home.html
test_files/: pyproject.toml  resume.docx
