[project]
name = "fastfiles"
version = "0.1.0"
description = "File storage for fastapi"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "fastapi>=0.120.4",
    "jinja2>=3.1.6",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
