[project]
name = "filestore"
version = "0.1.0"
description = "File storage dependency for FastAPI"
requires-python = ">=3.11"
author = "Ichinga Samuel"
dependencies = [
    "fastapi>=0.120.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.40.59",
    "boto3-stubs==1.40.59",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]
